name:               haskellbook-morse
version:            0.1.0.0             
license-file:       LICENSE             
author:             Chris Allen         
maintainer:         cma@bitemyapp.com   
category:           Text                
build-type:         Simple              
cabal-version:      >=1.10     

library
  exposed-modules:  Morse             
  hs-source-dirs:   src
  ghc-options:      -Wall -fwarn-tabs 
  build-depends:    base >=4.7 && <5 ,  
                    containers ,
                    QuickCheck
  default-language: Haskell2010

executable morse
  main-is:          Main.hs           
  hs-source-dirs:   src              
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >=4.7 && <5 , 
                    containers ,
                    haskellbook-morse ,
                    QuickCheck
  default-language: Haskell2010
   
test-suite tests
  main-is:          tests.hs
  hs-source-dirs:   tests
  ghc-options:      -Wall -fno-warn-orphans
  type:             exitcode-stdio-1.0
  build-depends:    base ,
                    containers ,
                    haskellbook-morse ,
                    QuickCheck 
  default-language: Haskell2010

test-suite wordnumtests
  main-is:          WordNumberTests.hs
  hs-source-dirs:   tests
  ghc-options:      -Wall -fno-warn-orphans
  type:             exitcode-stdio-1.0
  build-depends:    base >=4.7 && <5  ,
                    containers ,
                    haskellbook-morse ,
                    hspec ,
                    QuickCheck 
  default-language: Haskell2010

test-suite quickTest
  main-is:          quickTest.hs
  hs-source-dirs:   tests
  ghc-options:      -Wall -fno-warn-orphans
  type:             exitcode-stdio-1.0
  build-depends:    base >=4.7 && <5  ,
                    containers ,
                    haskellbook-morse ,
                    hspec ,
                    QuickCheck 
  default-language: Haskell2010
